Fri, Feb 2, 2024, 2:38 PM +00:00

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
 				"redhat.fabric8-analytics",
 				"sohibe.java-generate-setters-getters",
 		    	"streetsidesoftware.code-spell-checker",
-				"DavidAnson.vscode-markdownlint"
+				"DavidAnson.vscode-markdownlint",
+				"EditorConfig.EditorConfig"
             ]
         }
     }
