--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
     "[java]": {
         "files.trimTrailingWhitespace": true,
         "editor.renderWhitespace": "all"
-    }
+    },
+    "prettier.prettierPath": ".editorconfig"
 }
