--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,16 @@
 {
-	"customizations": {
+    "customizations": {
         "vscode": {
             "extensions": [
-				"GitHub.copilot",
-				"vsls-contrib.gitdoc",
-				"vscjava.vscode-java-pack",
-				"redhat.fabric8-analytics",
-				"sohibe.java-generate-setters-getters",
-		    	"streetsidesoftware.code-spell-checker",
-				"DavidAnson.vscode-markdownlint",
-				"EditorConfig.EditorConfig",
-                "mwpb.java-prettier-formatter"
+                "GitHub.copilot",
+                "vsls-contrib.gitdoc",
+                "vscjava.vscode-java-pack",
+                "redhat.fabric8-analytics",
+                "sohibe.java-generate-setters-getters",
+                "streetsidesoftware.code-spell-checker",
+                "DavidAnson.vscode-markdownlint",
+                "EditorConfig.EditorConfig",
+                "ilkka.google-java-format"
             ]
         }
     }
